[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "unitime"
dynamic = ["version", "dependencies"]
description = ""
readme = "README.md"
license = {file = "LICENSE"}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {file = "VERSION"}

[tool.setuptools]
package-data = {"data" = ["data/*"], "configs" = ["configs/*"]}

[tool.setuptools.packages.find]
